# sonos-api

./: .env.example  .gitignore  README.md  pyproject.toml
deploy/: install.sh  sonos-api.service
sonos_api/: config.py  main.py
sonos_api/discovery/: manager.py
sonos_api/models/: state.py
sonos_api/routers/: equalizer.py  events.py  favorites.py  groups.py  playback.py  queue.py  settings.py  state.py  system.py  tts.py  volume.py
sonos_api/services/: tts.py
sonos_api/utils/: retry.py  speaker.py
