[project]
name = "sonos-api"
version = "0.1.0"
description = "Stable Python HTTP API for Sonos speakers"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "soco>=0.30",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "gtts>=2.5",
    "sse-starlette>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
